--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    <title>DJI Tutorial</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .welcome-section {
+            text-align: center;
+            margin-top: 50px;
+        }
+        .welcome-section h1 {
+            font-size: 2.5rem;
+            color: #007bff;
+        }
+        .welcome-section p {
+            font-size: 1.2rem;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
     <div id="navbar-container"></div>
+    
+    <div class="container welcome-section">
+        <h1>Welcome to DJI Tutorial</h1>
+        <p>Please click the navbar to go through the tutorials.</p>
+    </div>
     
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
