--- a/tutorial1.html
+++ b/tutorial1.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Q&A Chat Template</title>
+<title>DJI Tutorial</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -224,11 +224,11 @@ if __name__ == "__main__":
             <div class="explanation">
                 <p><strong>Additional Notes</strong></p>
                 <p>
-                    *   The specific API endpoints, request/response formats, and required parameters for Wayline Management will vary depending on the DJI Cloud API version and the capabilities of the connected drone. Consult the official DJI Cloud API documentation for the most accurate and up-to-date information.  The documentation is your primary resource for accurate and up-to-date information.
-                    *   The code provided here is a general illustration and might need adjustments based on the specific requirements of the DJI API.
-                    *   Remember to replace placeholders like `YOUR_API_KEY` with your actual credentials.
-                    *   Install the `requests` library if you haven't already: `pip install requests`
-                    *   Wayline management often involves other related APIs for managing waypoints, tasks, geofences, and other mission components.  Explore the DJI Cloud API documentation for a comprehensive view of the available functionalities.
+                    <br>  *   The specific API endpoints, request/response formats, and required parameters for Wayline Management will vary depending on the DJI Cloud API version and the capabilities of the connected drone. Consult the official DJI Cloud API documentation for the most accurate and up-to-date information.  The documentation is your primary resource for accurate and up-to-date information.
+                    <br>  *   The code provided here is a general illustration and might need adjustments based on the specific requirements of the DJI API.
+                    <br>  *   Remember to replace placeholders like `YOUR_API_KEY` with your actual credentials.
+                    <br> *   Install the `requests` library if you haven't already: `pip install requests`
+                    <br> *   Wayline management often involves other related APIs for managing waypoints, tasks, geofences, and other mission components.  Explore the DJI Cloud API documentation for a comprehensive view of the available functionalities.
                 </p>
             </div>
         </div>
@@ -236,8 +236,6 @@ if __name__ == "__main__":
 </div>
 
 <!-- Question 2 -->
-
-<div class="chat-bubble question align-self-end">For DJI Cloud API services, what are the APIs used for Access to Cloud Server? Show some sample code.</div>
 <div class="chat-bubble answer">
     <div class="message-with-avatar">
         <div class="avatar"></div>
@@ -324,10 +322,10 @@ if __name__ == "__main__":
             <div class="explanation">
                 <p><strong>Additional Notes</strong></p>
                 <p>
-                    *   Refer to the official DJI Cloud API documentation for the full list of available APIs, data types, and request parameters.  The documentation is your primary resource for accurate and up-to-date information.
-                    *   The code provided here is a general illustration and might need adjustments based on the specific requirements of the DJI API.
-                    *   Remember to replace placeholders like `YOUR_API_KEY` with your actual credentials.
-                    *   Install the `requests` library if you haven't already: `pip install requests`
+                    <br>  *   Refer to the official DJI Cloud API documentation for the full list of available APIs, data types, and request parameters.  The documentation is your primary resource for accurate and up-to-date information.
+                    <br>  *   The code provided here is a general illustration and might need adjustments based on the specific requirements of the DJI API.
+                    <br> *   Remember to replace placeholders like `YOUR_API_KEY` with your actual credentials.
+                    <br> *   Install the `requests` library if you haven't already: `pip install requests`
                 </p>
             </div>
         </div>
@@ -337,8 +335,6 @@ if __name__ == "__main__":
 
 
 <!-- Question 3 -->
-
-<div class="chat-bubble question align-self-end">For DJI Cloud API services, what are the APIs used for Device Management of the DJI Dock? Show some sample code.</div>
 <div class="chat-bubble answer">
     <div class="message-with-avatar">
         <div class="avatar"></div>
@@ -443,10 +439,10 @@ if __name__ == "__main__":
             <div class="explanation">
                 <p><strong>Additional Notes</strong></p>
                 <p>
-                    *   Refer to the official DJI Cloud API documentation for the full list of available APIs, request parameters, and the structure of the data returned by the API. The documentation is your primary resource for accurate and up-to-date information.
-                    *   The code provided here is a general illustration and might need adjustments based on the specific requirements of the DJI API.
-                    *   Remember to replace placeholders like `YOUR_API_KEY` with your actual credentials.
-                    *   Install the `requests` library if you haven't already: `pip install requests`
+                    <br>  *   Refer to the official DJI Cloud API documentation for the full list of available APIs, request parameters, and the structure of the data returned by the API. The documentation is your primary resource for accurate and up-to-date information.
+                    <br> *   The code provided here is a general illustration and might need adjustments based on the specific requirements of the DJI API.
+                    <br>  *   Remember to replace placeholders like `YOUR_API_KEY` with your actual credentials.
+                    <br> *   Install the `requests` library if you haven't already: `pip install requests`
                 </p>
             </div>
         </div>
@@ -454,8 +450,6 @@ if __name__ == "__main__":
 </div>
 
 <!-- Question 4 -->
-
-<div class="chat-bubble question align-self-end">For DJI Cloud API services, what are the steps for calling the APIs used for Live Streaming? What are the available APIs for live streaming? Show some sample code.</div>
 <div class="chat-bubble answer">
     <div class="message-with-avatar">
         <div class="avatar"></div>
@@ -579,11 +573,11 @@ if __name__ == "__main__":
             <div class="explanation">
                 <p><strong>Additional Notes</strong></p>
                 <p>
-                    *   Refer to the official DJI Cloud API documentation for the full list of available APIs, request parameters, and the structure of the data returned by the API. The documentation is your primary resource for accurate and up-to-date information.
-                    *   The code provided here is a general illustration and might need adjustments based on the specific requirements of the DJI API.
-                    *   Remember to replace placeholders like `YOUR_API_KEY` and `your_drone_id` with your actual credentials.
-                    *   Install the `requests` library if you haven't already: `pip install requests`
-                    *   The `stream_config` dictionary should contain the desired settings for your live stream (resolution, bitrate, etc.).  Consult the DJI Cloud API documentation for the valid options.
+                   <br> *   Refer to the official DJI Cloud API documentation for the full list of available APIs, request parameters, and the structure of the data returned by the API. The documentation is your primary resource for accurate and up-to-date information.
+                   <br> *   The code provided here is a general illustration and might need adjustments based on the specific requirements of the DJI API.
+                   <br> *   Remember to replace placeholders like `YOUR_API_KEY` and `your_drone_id` with your actual credentials.
+                   <br>*   Install the `requests` library if you haven't already: `pip install requests`
+                   <br> *   The `stream_config` dictionary should contain the desired settings for your live stream (resolution, bitrate, etc.).  Consult the DJI Cloud API documentation for the valid options.
                 </p>
             </div>
         </div>
