--- a/navbar.html
+++ b/navbar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar with Dropdowns</title>
+    <title>DJI Tutorial</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -87,7 +87,7 @@ crossorigin="anonymous"></script>
 
                       <li><a class="dropdown-item" href="">Wayline Management &raquo </a>
                           <ul class="submenu dropdown-menu">
-                              <li><a class="dropdown-item" href="/tutorial1.html">Tutorial 1</a></li>
+                              <li><a class="dropdown-item" href="tutorial1.html">Tutorial 1</a></li>
                               <li><a class="dropdown-item" href="./tutorial2.html">Tutorial 2</a></li>
                           </ul>
                       </li>
