--- a/wayline_dock.html
+++ b/wayline_dock.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Situation awareness</title>
+<title>DJI Tutorial</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -108,7 +108,7 @@ border-radius: 5px;
 
 <div class="container chat-container">
 
-<h3 class="text-center">Wayline Management (Dock Function Set)</h3>
+<h3 class="text-center">Wayline Management</h3>
 
 
 <div class="d-flex flex-column">
