--- a/navbar.html
+++ b/navbar.html
@@ -70,14 +70,14 @@ crossorigin="anonymous"></script>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary p-3">
 
-        <a class="navbar-brand" href="index.html">DJI Tutorial</a>
+        <a class="navbar-brand" href="./index.html">DJI Tutorial</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="main_nav">
       
       <ul class="navbar-nav">
-          <li class="nav-item active"> <a class="nav-link" href="/index.html">Home </a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="./index.html">Home </a> </li>
           
           <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href=""> Function Set </a>
